name:                TodoMVC
version:             0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
                     
executable TodoMVC
  main-is:             Main.hs
  other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9
                     ,  transformers
                     , ghcjs-base
                     , ghcjs-dom >= 0.2 && < 0.3
                     , ghcjs-vdom
                     , containers
                     , semigroups
                     , ghcjs-ffiqq
  hs-source-dirs:      src
  default-language:    Haskell2010