name:                echo
version:             0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable echo
  main-is:             Main.hs
  other-modules:
-- other-extensions:
  build-depends:       base >=4.7 && <4.9
                     ,  transformers
                     , ghcjs-base
                     , ghcjs-dom >= 0.1 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
