name:                hamlet-static
version:             0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hamlet-static
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010
  build-depends: base >= 4.7 && <4.9
               , ghcjs-base
               , ghcjs-dom >= 0.2 && < 0.3
               , shakespeare
               , blaze-html
               , text
